# lab05

./: CMakeLists.txt  README.md
.github/workflows/: cicd.yml
banking/: CMakeLists.txt
tests/: .test.cpp.swp  CMakeLists.txt  test.cpp
